# remoto_wifi

./: CMakeLists.txt  README.md  demo_app.c  ivdcm.ini  main.c  mips_openwrt.cmake  remoto_wifi.ini  setup_env.sh
3rd_party_static/: CMakeLists.txt
components/: CMakeLists.txt
components/config_profile/: CMakeLists.txt  ini_file.h  profile.h
components/config_profile/src/: ini_file.c  profile.c
components/logger/: CMakeLists.txt  logger.h
components/logger/src/: logger.c
components/utils/: CMakeLists.txt  array.h  atomic.h  condition_variable.h  data_accessor.h  file_system.h  list.h  macro.h  make_shared.h  map_initialiser.h  mutex_locker.h  prioritiezed_queue.h  publisher_interface.h  rwlock.h  scope_guard.h  shared_ptr.h  system.h  types.h
components/utils/src/: array.c  condition_variable.c  file_system.c  list.c  mutex_locker.c  rwlock_posix.c  system.c
